--- a/CdManager.WPF/MainWindow.xaml
+++ b/CdManager.WPF/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:CdManager.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="340" Width="511" MinWidth="392" MinHeight="180"
-        x:Name="wndMain">
+        x:Name="wndMain"
+        Style="{StaticResource ResourceKey=WindowStyle}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,7 +15,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="CD-Sammlung" Margin="0, 10, 0, 20" FontStyle="Oblique"/>
+        <TextBlock Style="{StaticResource ResourceKey=FormCaptionStyle}" Grid.Row="0" Text="CD-Sammlung"/>
         
         <!--<ListBox x:Name="listBoxCds" Grid.Row="1">
             <ListBox.ItemTemplate>
@@ -42,9 +43,9 @@
         </ListView>
 
         <UniformGrid Grid.Row="2" Columns="3">
-            <Button x:Name="btnNew" Margin="10,10,10,10" Content="Neu"/>
-            <Button x:Name="btnDelete" Margin="10,10,10,10" Content="Löschen"/>
-            <Button x:Name="btnEdit" Margin="10,10,10,10" Content="CD bearbeiten"/>
+            <Button x:Name="btnNew" Content="Neu"/>
+            <Button x:Name="btnDelete" Content="Löschen"/>
+            <Button x:Name="btnEdit" Content="CD bearbeiten"/>
         </UniformGrid>
     </Grid>
 </Window>
